--- a/glide.yaml
+++ b/glide.yaml
@@ -4,3 +4,5 @@ import:
   version: v0.7.0
 - package: github.com/src-d/go-git
   version: ^4.2.0
+- package: github.com/russross/blackfriday
+  version: ^2.0.0
