--- a/package.json
+++ b/package.json
@@ -5,41 +5,43 @@
   "description": "Web client for qcmd",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --debug --devtool cheap-module-source-map --output-pathinfo --history-api-fallback --hot --inline --progress --colors --port 3000",
-    "build": "webpack -p --progress --colors"
+    "start-dev": "webpack-dev-server --config=web/client/configs/webpack/dev.js",
+    "build": "webpack -p --config=web/client/configs/webpack/prod.js"
   },
   "license": "MIT",
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/classnames": "2.2.3",
+    "@types/classnames": "2.2.6",
     "@types/history": "4.6.2",
     "@types/prop-types": "^15.5.2",
+    "@types/query-string": "^6.1.0",
     "@types/react": "^16.0.40",
     "@types/react-autosuggest": "^9.3.4",
-    "@types/react-dom": "16.0.4",
-    "@types/react-router": "4.0.23",
+    "@types/react-dom": "16.0.6",
+    "@types/react-router": "4.0.29",
     "@types/react-router-dom": "^4.2.4",
-    "@types/query-string": "^6.1.0",
-    "awesome-typescript-loader": "^3.5.0",
-    "css-loader": "^0.28.10",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "awesome-typescript-loader": "^5.2.0",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "postcss": "^6.0.19",
+    "html-webpack-plugin": "^3.2.0",
+    "postcss": "^7.0.1",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.1",
     "postcss-reporter": "^5.0.0",
     "postcss-url": "^7.3.1",
-    "react-hot-loader": "^3.1.3",
-    "style-loader": "^0.19.0",
+    "react-hot-loader": "^4.3.3",
+    "style-loader": "^0.21.0",
+    "stylelint-webpack-plugin": "^0.10.5",
     "typescript": "^2.7.2",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.2"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-merge": "^4.1.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
